--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
-    <title>DOM Demo</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>JS For Beginners</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
@@ -19,13 +18,13 @@
         <div class="msg"></div>
         <div>
           <label for="name">Name:</label>
-          <input type="text" id="name" />
+          <input type="text" id="name">
         </div>
         <div>
           <label for="email">Email:</label>
-          <input type="text" id="email" />
+          <input type="text" id="email">
         </div>
-        <input class="btn" type="submit" value="Submit" />
+        <input class="btn" type="submit" value="Submit">
       </form>
 
       <ul id="users"></ul>
@@ -36,6 +35,7 @@
         <li class="item">Item 3</li>
       </ul> -->
     </section>
+    
 
     <script src="main.js"></script>
   </body>
